Improve deduplication for ntp tiles

This CL introduces a simple blacklist so that popular sites don't
produce duplicates with similar mobile sites.
If ML or TS deliver such duplicate, it will not be prevented.

Bug: 752928
Change-Id: Ie7222ecb6468d4d727343f7e5416a16be02b380c