components/ntp_tiles/most_visited_sites_unittest.cc
@@ -301,6 +301,21 @@ class PopularSitesFactoryForTest {
           net::HTTP_OK, net::URLRequestStatus::SUCCESS);
 
       url_fetcher_factory_.SetFakeResponse(
+          GURL("https://www.gstatic.com/chrome/ntp/suggested_sites_US_5.json"),
+          R"([{
+                "title": "ESPN",
+                "url": "http://www.espn.com",
+                "favicon_url": "http://www.espn.com/favicon.ico"
+              },
+              {
+                "title": "Google News",
+                "url": "http://news.google.com",
+                "favicon_url": "http://news.google.com/favicon.ico"
+              },
+             ])",
+          net::HTTP_OK, net::URLRequestStatus::SUCCESS);
+
+      url_fetcher_factory_.SetFakeResponse(
           GURL("https://www.gstatic.com/chrome/ntp/suggested_sites_IN_6.json"),
           R"([{
                 "section": 1, // PERSONALIZED
@@ -911,6 +926,40 @@ TEST_P(MostVisitedSitesTest, ShouldContainSiteExplorationsWhenFeatureEnabled) {
             Contains(Pair(SectionType::NEWS, SizeIs(2ul))),
             Contains(Pair(SectionType::SOCIAL, SizeIs(1ul))),
             Contains(Pair(_, IsEmpty()))));
+}
+
+TEST_P(MostVisitedSitesTest,
+       ShouldDeduplicatePopularSitesWithMostVisitedIffHostAndTitleMatches) {
+  pref_service_.SetString(prefs::kPopularSitesOverrideCountry, "US");
+  RecreateMostVisitedSites();  // Refills cache with ESPN and Google News.
+  DisableRemoteSuggestions();
+  EXPECT_CALL(*mock_top_sites_, GetMostVisitedURLs(_, false))
+      .WillRepeatedly(InvokeCallbackArgument<0>(MostVisitedURLList{
+          MakeMostVisitedURL("ESPN", "http://espn.com/"),
+          MakeMostVisitedURL("Google", "http://www.google.com/")}));
+  EXPECT_CALL(*mock_top_sites_, SyncWithHistory());
+  std::map<SectionType, NTPTilesVector> sections;
+  EXPECT_CALL(mock_observer_, OnURLsAvailable(_))
+      .WillOnce(SaveArg<0>(&sections));
+
+  most_visited_sites_->SetMostVisitedURLsObserver(&mock_observer_,
+                                                  /*num_sites=*/4);
+  base::RunLoop().RunUntilIdle();
+  ASSERT_THAT(sections, Contains(Key(SectionType::PERSONALIZED)));
+  EXPECT_THAT(sections.at(SectionType::PERSONALIZED),
+              Contains(MatchesTile("Google", "http://www.google.com/",
+                                   TileSource::TOP_SITES)));
+  if (IsPopularSitesEnabledViaVariations()) {
+    EXPECT_THAT(sections.at(SectionType::PERSONALIZED),
+                Contains(MatchesTile("Google News", "http://news.google.com/",
+                                     TileSource::POPULAR)));
+  }
+  EXPECT_THAT(
+      sections.at(SectionType::PERSONALIZED),
+      Contains(MatchesTile("ESPN", "http://espn.com/", TileSource::TOP_SITES)));
+  EXPECT_THAT(sections.at(SectionType::PERSONALIZED),
+              Not(Contains(MatchesTile("ESPN", "http://www.espn.com/",
+                                       TileSource::POPULAR))));
 }
 
 TEST_P(MostVisitedSitesTest, ShouldHandleTopSitesCacheHit) {
